update modifier localisation

--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -165,7 +165,7 @@ duck_dev_speed_increase;Development Growth;Croissance du développement;;;;;;;;;;
 
 #### elephant update
 eleph_fertility_bonus;Elephant accidient;Accident éléphantin;;;;;;;;;;;;x
-eleph_province_hostility;Elephant tension;Tension éléphantine;;;;;;;;;;;;x
+eleph_province_hostility;cultural tensions;Tensions cuturels;;;;;;;;;;;;x
 eleph_researsh_bonus;Successful study;études réussites;;;;;;;;;;;;x
 eleph_epidemic_unrest;Ruler unrespected;Seigneur non respecté;;;;;;;;;;;;x
 eleph_epidemic_garrison;Undisciplined peasant;Paysants indiscipliné;;;;;;;;;;;;x
