--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -191,6 +191,7 @@ cat_mod_society_intrigue_1;bad omen;Mauvais présage;;;;;;;;;;;;x
 
 #opinion modifier
 cat_intrigue_power_1_denounced;Bad omen creator;Créateur de mauvais présages;;;;;;;;;;;;x
+cat_intrigue_angry;Sabotage;Saboté;;;;;;;;;;;;x
 
 #holding modifier
 cat_controlled_holding;Controlled by cats;Contrôlé par des chats;;;;;;;;;;;;x
