--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -245,3 +245,4 @@ CAT_TT_START_EPIDEMY;An epidemy start;Une épidémie commence;;;;;;;;;;;;x
 CAT_TT_DID_NOT_SABOTAGE;The county isn't already sabotaged;Le comté n'est pas saboté;;;;;;;;;;;;x
 CAT_TT_BUILDING_SABOTAGE;Destroy a random building;Détruit un bâtiment aléatoire;;;;;;;;;;;;x
 CAT_TT_BECOMING_INCAPABLE;become incapable;devient incapable;;;;;;;;;;;;x
+CAT_TT_BANISH_FROM_SOCIETY;is banned from the society;est banni de la société;;;;;;;;;;;;x
