--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -231,6 +231,24 @@ cat_charm_someone_power_F_power_desc;A chief must have at least one faithful vas
 cat_banish_someone_power_G;Banish someone from society;Bannir quelqu'un de la société;;;;;;;;;;;;x
 cat_banish_someone_power_G_desc;Banish someone definetly from the cat society;Bannir quelqu'un définitivement d'une société de chat;;;;;;;;;;;;x
 cat_banish_someone_power_G_power_desc;As the society chief, it is possible to banish someone from the cat society;En tant que chef, il est possible de bannir quelqu'un de la société;;;;;;;;;;;;x
+cat_illness_resistance_power_A;Increased illness resistance;meilleur résistance à la maladie;;;;;;;;;;;;x
+cat_illness_resistance_power_A_desc;By using your society power, you can lessen disease impact on your life;En utilisant le pouvoir de la société, il est possible de réduire les effets d'une maladie;;;;;;;;;;;;x
+cat_illness_resistance_power_A_power_desc;Life is important, so increase the resistance of lord against disease is important;La vie est très importante, permettre aux dirigeants de résister aux maladies aussi;;;;;;;;;;;;x
+cat_more_health_power_B;Increase your life expectancy;Augmenter son espérence de vie;;;;;;;;;;;;x
+cat_more_health_power_B_desc;;;;;;;;;;;;;;x
+cat_more_health_power_B_power_desc;;;;;;;;;;;;;;x
+cat_wealth_from_county_power_C;Increase county revenue;Augmenter les revenus d'une province;;;;;;;;;;;;x
+cat_wealth_from_county_power_C_desc;Increase county tax and cities;Augmente les taxes du comtés et des cités;;;;;;;;;;;x
+cat_wealth_from_county_power_C_power_desc;Increase wealth of a province;Augment la richesse d'une province;;;;;;;;;;;x
+cat_county_epidemic_resistance_power_D;less epidemic;Moins d'épidémie;;;;;;;;;;;;x
+cat_county_epidemic_resistance_power_D_desc;Reduce epidemy outbreak chance;Réduire le nombre d'épidémie dans la province;;;;;;;;;;;;x
+cat_county_epidemic_resistance_power_D_power_desc;Reduce epidemic outbreak on specific provinces;Réduis le nombre d'épidémies dans les provinces au choix;;;;;;;;;;;;x
+cat_create_new_holding_power_E;Create a new tribe;Créer une nouvelle tribu;;;;;;;;;;;;x
+cat_create_new_holding_power_E_desc;Create a new cat tribe in the province;Crée une nouvelle tribu de chat dans la province;;;;;;;;;;;;x
+cat_create_new_holding_power_E_power_desc;Increase a province prosperity by creating a new tribe;Augmenter la prospérité de la province en créant une nouvelle tribu;;;;;;;;;;;;x
+cat_increase_prosperity_level_power_F;Increase a province's prosperity level;Augmenter la prosperité d'une province;;;;;;;;;;;;x
+cat_increase_prosperity_level_power_F_desc;If no issue happens, making a province prosperous assure the whole country prosperity;Lorsque la province n'es pas en trouble, il est possible d'améliorer sa prospérité et ainsi celle du pays;;;;;;;;;;;;x
+cat_increase_prosperity_level_power_F_power_desc;If no issue happens, making a province prosperous assure the whole country prosperity;Lorsque la province n'es pas en trouble, il est possible d'améliorer sa prospérité et ainsi celle du pays;;;;;;;;;;;;x
 
 
 #TOOLTIPS
