--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -195,6 +195,7 @@ cat_intrigue_angry;Sabotage;Saboté;;;;;;;;;;;;x
 cat_intrigue_charmed;under charm;sous le charme;;;;;;;;;;;;x
 cat_mod_society_prosperity_illness;illness defense;Résistance à la maladie;;;;;;;;;;;;x
 cat_mod_society_prosperity_life_bonus;longer life expectancy;Éspérence de vie augmenté;;;;;;;;;;;;x
+cat_mod_society_prosperity_epidemic_defense;Less epidemic outbreak;Moins d'épidémie présente;;;;;;;;;;;;x
 
 #holding modifier
 cat_controlled_holding;Controlled by cats;Contrôlé par des chats;;;;;;;;;;;;x
