--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -265,3 +265,6 @@ CAT_TT_DID_NOT_SABOTAGE;The county isn't already sabotaged;Le comté n'est pas sa
 CAT_TT_BUILDING_SABOTAGE;Destroy a random building;Détruit un bâtiment aléatoire;;;;;;;;;;;;x
 CAT_TT_BECOMING_INCAPABLE;become incapable;devient incapable;;;;;;;;;;;;x
 CAT_TT_BANISH_FROM_SOCIETY;is banned from the society;est banni de la société;;;;;;;;;;;;x
+CAT_TT_PROVINCE_NOT_DEPOPULATED;The province isn't under depopulation effect;La province n'est sous l'effet d'une dépopulation;;;;;;;;;;;;x
+CAT_TT_MAX_PROSPERITY_NOT_ATTAINED;The prosperity level can increase;Le niveau de prospérité augmente;;;;;;;;;;;;x
+CAT_TT_INCREASE_PROSPERITY;The prosperity level increase;Le niveau de prospérité augmente;;;;;;;;;;;;x
