--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -192,11 +192,13 @@ cat_mod_society_prosperity_illness;illness defense;Résistance à la maladie;;;;;;
 cat_mod_society_prosperity_life_bonus;longer life expectancy;Éspérence de vie augmenté;;;;;;;;;;;;x
 cat_mod_society_prosperity_epidemic_defense;Less epidemic outbreak;Moins d'épidémie présente;;;;;;;;;;;;x
 cat_mod_increased_wealth_province;More income;Plus de revenu;;;;;;;;;;;;x
+cat_mod_reputation_vassal;Vassal reputation;Réputation des vassaux;;;;;;;;;;;;x
+cat_mod_reputation_cats;Global reputation;Réputation globale;;;;;;;;;;;;x
 
 #opinion modifier
 cat_intrigue_power_1_denounced;Bad omen creator;Créateur de mauvais présages;;;;;;;;;;;;x
 cat_intrigue_angry;Sabotage;Saboté;;;;;;;;;;;;x
 cat_intrigue_charmed;under charm;sous le charme;;;;;;;;;;;;x
-
+cat_group_opinion;Cats' opinion;Opinion des chats;;;;;;;;;;;;x
 #holding modifier
 cat_controlled_holding;Controlled by cats;Contrôlé par des chats;;;;;;;;;;;;x
