--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -200,5 +200,7 @@ cat_intrigue_power_1_denounced;Bad omen creator;Créateur de mauvais présages;;;;
 cat_intrigue_angry;Sabotage;Saboté;;;;;;;;;;;;x
 cat_intrigue_charmed;under charm;sous le charme;;;;;;;;;;;;x
 cat_group_opinion;Cats' opinion;Opinion des chats;;;;;;;;;;;;x
+cat_forced_alliance;Forced alliance;Alliance forcé;;;;;;;;;;;;x
+
 #holding modifier
 cat_controlled_holding;Controlled by cats;Contrôlé par des chats;;;;;;;;;;;;x
