--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -129,6 +129,7 @@ DESC_142_BECOME_INCAPABLE;I don't feel good, something amiss.;Ces derniers jours
 OPT_142_BECOME_INCAPABLE;It must be those cat, they are everywhere;Ce doit être ces chats là, ils sont partotu!;;;;;;;;;;;;x
 DESC_143_NOTIF_GETTING_BANISHED;I, as the grandmaster, decide to banish you. You have no reason to be a member of my glorious society;En tant que chef de la société, je décide de te bannir de la société. Il n'y a aucun intérêt pour que tu restes dedans.;;;;;;;;;;;;x
 OPT_143_GETTING_BANISHED;...;;;;;;;;;;;;;x
+DESC_CAT_GLOBAL_QUEST;As a cat ruler, you must show your ability...; En tant que dirigeant chat, tu dois de t'en montrer digne...;;;;;;;;;;;;x
 
 
 ##tooltips
