--- a/animals_update/localisation/society.csv
+++ b/animals_update/localisation/society.csv
@@ -14,6 +14,10 @@ cat_intrigue_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
 society_no_intrigue_10;Do not have §Y10§! in intrigue: §R-10§!;N'a pas §Y10§! d'intrigue: §R-10§!;;;;;;;;;;;;x
 society_no_intrigue_5;Do not have §Y5§! in intrigue: §R-10§!;N'a pas §Y5§! d'intrigue: §R-10§!;;;;;;;;;;;;x
 
+cat_quest_intrigue_1_fallback;put a curse on someone;Maudire quelqu'un;;;;;;;;;;;;x
+cat_quest_intrigue_1_desc;By using your power to curse someone, one way or another you can have the quest rewards;Pour cette quête, il va falloir maudire quelqu'un d'une manière ou d'une autre;;;;;;;;;;;;x
+cat_quest_intrigue_1_tooltip;You can complete this quest by doing it's related society power;Tu peux réussir cette guerre en utilisant les pouvoirs de sociétés associé à la quête.;;;;;;;;;;;;x
+
 ### prosperity society
 cat_prosperity_society;Prosperity society;Société de prospérité;;;;;;;;;;;;x
 cat_prosperity_society_desc;Society formed by cat to make prosperous countries;Société formé par les chats pour faire prospérer les pays;;;;;;;;;;;;x
@@ -27,6 +31,9 @@ cat_prosperity_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
 cat_prosperity_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
 society_no_learning_8;Do not have §Y8§! in learning: §R-10§!;N'a pas §Y8§! d'érudition: §R-10§!;;;;;;;;;;;;x
 society_no_stewardship_8;Do not have §Y8§! in stewardship: §R-10§!;N'a pas §Y8§! d'intendance: §R-10§!;;;;;;;;;;;;x
+cat_quest_prosperity_1_fallback;Better health;une meilleur santé;;;;;;;;;;;;x
+cat_quest_prosperity_1_desc;By using your health power, you can success this quest;En utilisant tes pouvoirs de santé, tu peux réussir cette quête.;;;;;;;;;;;;x
+cat_quest_prosperity_1_tooltip;You can complete this quest by doing it's related society power;Tu peux réussir cette guerre en utilisant les pouvoirs de sociétés associé à la quête.;;;;;;;;;;;;x
 
 ### reputation society
 cat_reputation_society;Reputation society;Société de réputation;;;;;;;;;;;;x
@@ -41,7 +48,9 @@ cat_reputation_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
 cat_reputation_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
 society_no_marital_8;Do not have §Y8§! in martial: §R-10§!;N'a pas §Y8§! de martial: §R-10§!;;;;;;;;;;;;x
 society_no_diplomacy_8;Do not have §Y8§! in diplomacy: §R-10§!;N'a pas §Y8§! de diplomatie: §R-10§!;;;;;;;;;;;;x
-
+cat_quest_reputation_1_fallback;Increase your social standards;Devenir plus social;;;;;;;;;;;;x
+cat_quest_reputation_1_desc;By using social power, you can win this quest;En utilisant tes pouvoirs de diplomatie, tu peux réussir cette quête.;;;;;;;;;;;;x
+cat_quest_reputation_1_tooltip;You can complete this quest by doing it's related society power;Tu peux réussir cette guerre en utilisant les pouvoirs de sociétés associé à la quête.;;;;;;;;;;;;x
 
 ## common loc
 cat_animal_society_currency;Cat's credit;Crédit de chat;;;;;;;;;;;;x
