first set of quest success

--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -286,3 +286,4 @@ CAT_TT_BANISH_FROM_SOCIETY;is banned from the society;est banni de la société;;;
 CAT_TT_PROVINCE_NOT_DEPOPULATED;The province isn't under depopulation effect;La province n'est sous l'effet d'une dépopulation;;;;;;;;;;;;x
 CAT_TT_MAX_PROSPERITY_NOT_ATTAINED;The prosperity level can increase;Le niveau de prospérité augmente;;;;;;;;;;;;x
 CAT_TT_INCREASE_PROSPERITY;The prosperity level increase;Le niveau de prospérité augmente;;;;;;;;;;;;x
+CAT_TT_QUEST_COMPLETE;complete the quest;Réussi la quête;;;;;;;;;;;;x
