--- a/animals_update/localisation/society.csv
+++ b/animals_update/localisation/society.csv
@@ -48,8 +48,8 @@ cat_reputation_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
 cat_reputation_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
 society_no_marital_8;Do not have §Y8§! in martial: §R-10§!;N'a pas §Y8§! de martial: §R-10§!;;;;;;;;;;;;x
 society_no_diplomacy_8;Do not have §Y8§! in diplomacy: §R-10§!;N'a pas §Y8§! de diplomatie: §R-10§!;;;;;;;;;;;;x
-cat_quest_reputation_1_fallback;Increase your social standards;Devenir plus social;;;;;;;;;;;;x
-cat_quest_reputation_1_desc;By using social power, you can win this quest;En utilisant tes pouvoirs de diplomatie, tu peux réussir cette quête.;;;;;;;;;;;;x
+cat_quest_reputation_1_fallback;Increase your feats;Obtien plus de succès;;;;;;;;;;;;x
+cat_quest_reputation_1_desc;By using feats power, you can win this quest;En utilisant tes pouvoirs militaires, tu peux réussir cette quête.;;;;;;;;;;;;x
 cat_quest_reputation_1_tooltip;You can complete this quest by doing it's related society power;Tu peux réussir cette guerre en utilisant les pouvoirs de sociétés associé à la quête.;;;;;;;;;;;;x
 
 ## common loc
